--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 		<div class="project" onclick="GoToProject('generative-art');">
             Generative Art
         </div>
+		
+		<div class="project" onclick="GoToProject('audio-visualizer');">
+            Audio Visualizer
+        </div>
         
         <script src="js/jquery-3.6.0.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/kineticjs/5.2.0/kinetic.js"></script>
