Curve Fever project added

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 		<div class="project" onclick="GoToProject('audio-visualizer');">
             Audio Visualizer
         </div>
+		
+		<div class="project" onclick="GoToProject('curve-fever');">
+            Curve Fever
+        </div>
         
         <script src="js/jquery-3.6.0.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/kineticjs/5.2.0/kinetic.js"></script>
