Gaps added to Curve Fever and Bloom Effect added

--- a/curve-fever/index.html
+++ b/curve-fever/index.html
@@ -9,6 +9,10 @@
         <div id="gameArea">
 
         </div>
+        <div class="fps"></div>
+        <div id="scoreboard">
+            <div class="title">Scoreboard</div>
+        </div>
         <div id="menu" onclick="event.stopPropagation();">
             <div id="header">
                 Menu
@@ -28,6 +32,18 @@
                 <div class="wrapper">
                     <span class="color">Line-Width:</span>
                     <input id="line-width-input" type="number" value="15">
+                </div>
+                <div class="wrapper">
+                    <span class="color">Gradient-Start:</span>
+                    <input id="gradient-start-input" type="color" value="#f24040">
+                </div>
+                <div class="wrapper">
+                    <span class="color">Gradient-End:</span>
+                    <input id="gradient-end-input" type="color" value="#569dfc">
+                </div>
+                <div class="wrapper">
+                    <span class="color">Bloom:</span>
+                    <input id="bloom-input" type="checkbox">
                 </div>
             </div>
             <div class="spacer"></div>
