Icon added to Tree Generator

--- a/tree-generator/index.html
+++ b/tree-generator/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Tree Generator</title>
+        <link rel="icon" href="favico.ico">
         <link rel="stylesheet" href="index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
