Projects added + new Portfolio-Design implemented

--- a/audio-visualizer/index.html
+++ b/audio-visualizer/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Audio Visualizer</title>
+        <link rel="icon" href="../icon.png">
         <link rel="stylesheet" href="visualizer.css">
     </head>
     <body>
