--- a/curve-fever/index.html
+++ b/curve-fever/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>Curve Fever 0.1</title>
+        <link rel="icon" href="../icon.png">
         <link rel="stylesheet" href="index.css">
         <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     </head>
