--- a/generative-art/index.html
+++ b/generative-art/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="icon" href="../icon.png">
         <title>Generative Art | Canvas Experiment</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <div id="menu" onclick="event.stopPropagation();">
@@ -104,5 +105,5 @@
         </div>
         <canvas id="canvas"></canvas>
     </body>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </html>
