--- a/tree-generator/index.html
+++ b/tree-generator/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Tree Generator</title>
-        <link rel="icon" href="favico.ico">
-        <link rel="stylesheet" href="index.css">
+        <link rel="icon" href="../icon.png">
+        <link rel="stylesheet" href="css/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn+SC&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js" integrity="sha512-4P0ZJ49OMXe3jXT+EsEaq82eNwFeyYL81LeHGzGcEhowFbTqeQ80q+NEkgsE8tHPs6aCqvi7U+XWliAjDmT5Lg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="app.js"></script>
+        <script src="js/app.js"></script>
         <script>
             function saveImage(){
                 var link = document.getElementById('link');
