Maze Generator added and Folder Structure improved

--- a/index.html
+++ b/index.html
@@ -54,10 +54,17 @@
                     </div>
                 </div>
 
+                <div class="project-item dark" project="maze-generator">
+                    <img src="images/maze-generator.png">
+                    <div class="title">
+                        Maze Generator
+                    </div>
+                </div>
+
                 <div class="project-item light" project="generative-art">
                     <img src="images/generative-art.png">
                     <div class="title">
-                        Generative Art
+                        Generative Art Drawing
                     </div>
                 </div>
             </div>
@@ -88,7 +95,7 @@
             });
 
             function visitProject(link){
-                window.location.href = link;
+                window.location.href = "projects/"+link;
             }
         </script>
     </body>
