--- a/projects/curve-fever/index.html
+++ b/projects/curve-fever/index.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="utf-8">
         <title>Curve Fever 0.1</title>
-        <link rel="icon" href="../icon.png">
-        <link rel="stylesheet" href="index.css">
+        <link rel="icon" href="../../icon.png">
+        <link rel="stylesheet" href="css/index.css">
         <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
@@ -57,6 +57,6 @@
     </body>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
-    <script src="app.js"></script>
-    <script src="curve_fever.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/curve_fever.js"></script>
 </html>
