--- a/projects/generative-art/index.html
+++ b/projects/generative-art/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="../icon.png">
+        <link rel="icon" href="../../icon.png">
         <title>Generative Art | Canvas Experiment</title>
         <link rel="stylesheet" href="css/index.css">
     </head>
