--- a/projects/relational-algebra/index.html
+++ b/projects/relational-algebra/index.html
@@ -10,10 +10,10 @@
             }
         </style>
         <link rel="icon" href="../icon.png">
-        <link href="../js/enjoyhint/enjoyhint.css" rel="stylesheet">
+        <link href="../../js/enjoyhint/enjoyhint.css" rel="stylesheet">
         <link id="mainStyle" rel="stylesheet" href="css/main.css">
         <link id="elementStyle" rel="stylesheet" href="css/elements.css">
-        <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="../../bootstrap/css/bootstrap.css" rel="stylesheet">
         <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     </head>
     <body>
@@ -106,16 +106,16 @@
 
         <input id="file-input" type="file" name="name" style="display: none;" />
         
-        <script src="../js/jquery-3.6.0.js"></script>
+        <script src="../../js/jquery-3.6.0.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/kineticjs/5.2.0/kinetic.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
-        <script src="../js/jquery-ui.js"></script>
-        <script src="../js/jquery-connect/required/script/jquery.connectingLine.js"></script>
-        <script src="../bootstrap/js/bootstrap.bundle.js"></script>
+        <script src="../../js/jquery-ui.js"></script>
+        <script src="../../js/jquery-connect/required/script/jquery.connectingLine.js"></script>
+        <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
         <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-        <script src="../js/fontawesome.js" crossorigin="anonymous"></script>
-        <script src="../js/editor.js"></script>
-        <script src="../js/enjoyhint/enjoyhint.js"></script>
+        <script src="../../js/fontawesome.js" crossorigin="anonymous"></script>
+        <script src="../../js/editor.js"></script>
+        <script src="../../js/enjoyhint/enjoyhint.js"></script>
         <script>
         </script>
     </body>
