--- a/projects/tree-generator/index.html
+++ b/projects/tree-generator/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Tree Generator</title>
-        <link rel="icon" href="../icon.png">
+        <link rel="icon" href="../../icon.png">
         <link rel="stylesheet" href="css/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
