Project "Modeling Tool" added

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                         Generative Art Drawing
                     </div>
                 </div>
+				
+				<div class="project-item light" project="modeling-tool">
+                    <img src="images/modeling-tool.png">
+                    <div class="title">
+                        3D Modeling Tool
+                    </div>
+                </div>
             </div>
         </div>
         
